--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -14,10 +14,10 @@ $A$ er invertibel, hvis og kun hvis den reducerede trappeform af $A$ er $I_n$.
 %
 \begin{proof}
 Antag, at $n\times n$ matricen $A$ er invertibel, og at der findes en vektor \textbf{v} i $R^n$, så $A\textbf{v}=\textbf{0}$. 
-Deraf følger, at $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$, da det gælder for en invertibel matrix, at 
+Deraf følger, at $\textbf{v}=A^{-1}\textbf{0}=\textbf{0}$, da det gælder for en invertibel matrix, at .........
 \end{proof}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Inverse matricer har en række egenskaber, som formuleret i sætning \ref{thm:mxinvers} og \ref{thm:mxinvers2}.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Inverse matricer har en række egenskaber, som formuleret i sætning \ref{thm:mxinvers} og \ref{thm:mxinvers2}. 
 %
 \begin{thm}{}{mxinvers}
 Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
