--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -4,7 +4,7 @@ En funktion $f:\R^n \rightarrow \R^m$ siges at være \textbf{surjektiv} hvis den
 Funktionen siges at være \textbf{injektiv} hvis hver entydig vektor i $\R^n$ har en entydig vektor i $\R^m$ som afbildning.\\
 Hvis en funktion er både injektiv og surjektiv så er funktionen \textbf{bijektiv}.
 \end{defn}
-
+%Hvorfor står ovenstående uden for subsection? :0)
 \subsection{Invertibilitet af funktioner}
 
 Bemærk at notationen for inverse funktioner $f^{-1}$ ikke skal forstås som $\dfrac{1}{f}$, men blot notation som betegner den inverse funktion af $f$.
