--- a/incl/main/linear_algebra/Lineaer_afbilding.tex
+++ b/incl/main/linear_algebra/Lineaer_afbilding.tex
@@ -1,29 +1,30 @@
 \section{Lineær afbildning}
 %
-Vi definerer en funktion ved følgende:
-%
+%Vi definerer en funktion ved følgende:
+%Synes ovenstående er unødvendigt, så har udkommenteret det. 
 \begin{defn}{}{}
 Lad $\S _1 \subset \R^n$ og $\S _2 \subset \R^m$.
-En funktion $f$ fra $\S_1$ til $\S_2$, noteret $f:\S_1\rightarrow\S_2$, tildeler enhver vektor $\textbf{v}$ i $\S_1$, en unik vektor $f(\textbf{v})$ i $\S_2$.
+En funktion $f$ fra $\S_1$ til $\S_2$, noteret $f:\S_1\rightarrow\S_2$, tildeler enhver vektor $\textbf{v}$ i $\S_1$ en entydig vektor $f(\textbf{v})$ i $\S_2$.
 Vektoren $f(\textbf{v})$ kaldes en \textbf{afbildning} af $\textbf{v}$.
-$\S_1$ er domænet for funktionen $f$ mens $\S_2$ kaldes codomænet til $f$.
-\textbf{Billedmængden} for $f$ er defineret som mængden af afbildninger, $f(\textbf{v})$, for alle $\textbf{v}\in \S_1$.
+%Hedder det codomænet på dansk? Lyder underligt. 
+$\S_1$ er domænet for funktionen $f$, mens $\S_2$ kaldes codomænet til $f$.
+\textbf{Billedmængden} for $f$ er defineret som mængden af afbildninger $f(\textbf{v})$ for alle $\textbf{v}\in \S_1$.
 \end{defn}\noindent
 %
-På figur \ref{fig:afbild} ses at både $\textbf{u}$ og $\textbf{v}$ har $\textbf{w}$ som afbildning, da $f(\textbf{u})=f(\textbf{v})=\textbf{w}$.
+På figur \ref{fig:afbild} ses, at både $\textbf{u}$ og $\textbf{v}$ har $\textbf{w}$ som afbildning, da $f(\textbf{u})=f(\textbf{v})=\textbf{w}$.
 %Lav flot figur som 2.9 på side 167.
 \input{fig/tikz/dom}
 %
 \\
-For funktioner, som er et matrix-vektor produkt introduceres notationen $T_A$.
+For funktioner, som er matrix-vektorprodukter, introduceres notationen $T_A$.
 %
 \begin{defn}{}{fisk3}
 Lad $A$ være en $m \times n$ matrix.
-Funktionen $T_A:\R^n \rightarrow \R^m$ defineret ved $T_A(\textbf{x}) = A\textbf{x}$ for alle $\textbf{x} \in \R^n$ kaldes \textbf{matrix afbildning med $A$}.
+Funktionen $T_A:\R^n \rightarrow \R^m$, defineret ved $T_A(\textbf{x}) = A\textbf{x}$ for alle $\textbf{x} \in \R^n$, kaldes \textbf{matrix afbildning med $A$}.
 \end{defn}\noindent
 %
 Direkte fra sætning \ref{thm:mxvpro} ses det, at $T_A$ har egenskaberne $T_A(\textbf{u}+\textbf{v})=T_A(\textbf{u}) + T_A(\textbf{v})$ og $cT_A(\textbf{u}) = T_A(c\textbf{u})$.
-Funktioner der opfylder disse egenskaber får deres egen definition.
+Funktioner, der opfylder disse egenskaber, får deres egen definition.
 %
 \begin{defn}{}{}
 Funktionen $T: \R^n \rightarrow \R^m$ kaldes en \textbf{lineær afbildning}, hvis følgende vilkår gør sig gældende for alle $\textbf{u},\textbf{v} \in \R^n$ og alle skalarer $c$:
@@ -33,11 +34,11 @@ Funktionen $T: \R^n \rightarrow \R^m$ kaldes en \textbf{lineær afbildning}, hvi
 \end{enumerate}
 \end{defn}\noindent
 %
-Da matrix afbildning har disse egenskaber er alle matrix afbildninger lineære.
+Da matrixafbildning har disse egenskaber, er alle matrixafbildninger lineære.
 Følgende sætning viser nogle af egenskaberne ved lineær afbildning.
-%
+%Matrixafbildninger er ét ord. 
 \begin{thm}{}{afbegen}
-Lad $\textbf{u}, \textbf{v}$ være vektorer i $\R^n$ og lad $c$ og $k$ være skalarer.
+Lad $\textbf{u}, \textbf{v} \in \R^n$ og lad $c$ og $k$ være skalarer.
 For enhver lineær afbildning $T: \R^n \rightarrow \R^m$ er følgende udsagn sande:
 \begin{enumerate}[label = (\alph*)]
 \item $T(\textbf{0}) = \textbf{0}$.
@@ -48,14 +49,14 @@ For enhver lineær afbildning $T: \R^n \rightarrow \R^m$ er følgende udsagn san
 \end{thm}
 %
 \begin{proof}
-Lad $\textbf{u}, \textbf{v}$ være vektorer i $\R^n$, lad $c$ og $k$ være skalarer og lad $T: \R^n \rightarrow \R^m$ være en lineær transformation.
-Da $T$ bevarer vektoraddition haves at
+Lad $\textbf{u}, \textbf{v}$ være vektorer i $\R^n$, $c$ og $k$ være skalarer og lad $T: \R^n \rightarrow \R^m$ være en lineær transformation.
+Da $T$ bevarer vektoraddition haves, at
 %
 \begin{align*}
 T(\textbf{0}) = T(\textbf{0} + \textbf{0}) = T(\textbf{0}) + T(\textbf{0}).
 \end{align*}
 %
-Trækkes $T(\textbf{0})$ fra begge sider haves $\textbf{0} = T(\textbf{0})$, hvilket viser det ønskede.
+Trækkes $T(\textbf{0})$ fra begge sider haves, at $\textbf{0} = T(\textbf{0})$, hvilket viser det ønskede.
 %
 Da $T$ bevarer skalering haves
 % 
@@ -63,23 +64,24 @@ Da $T$ bevarer skalering haves
 T(-\textbf{u}) = T((-1)\textbf{u}) = (-1)T(\textbf{u}) = -T(\textbf{u}).
 \end{align*}
 %
-Ved kombination af at $T$ bevarer vektor addition og (b) haves
+Ved kombination af at $T$ bevarer vektor addition og (b) haves, at
 %
 \begin{align*}
 T(\textbf{u}-\textbf{v}) = T(\textbf{u}+(-\textbf{v})) = T(\textbf{u})+T(-\textbf{v}) = T(\textbf{u}) - T(\textbf{v}).
 \end{align*}
 %
-Da $T$ både bevarer både vektor addition og skalering haves 
+Da $T$ både bevarer både vektor addition og skalering haves, at 
 %
 \begin{align*}
 T(c\textbf{u} + k\textbf{v}) = T(c\textbf{u}) + T(k\textbf{v}) = cT(\textbf{u}) + kT(\textbf{u}).
 \end{align*}
 \end{proof}
 %
-Sætning \ref{thm:afbegen}(d) kan generaliseres til at vise at lineær afbildning bevarer lineær kombinationer.
-%
+Sætning \ref{thm:afbegen}(d) kan generaliseres til at vise, at lineær afbildning bevarer linearkombinationer.
+%Linearkombinationer
 \begin{lem}{}{}
-Lad $T:\R^n \rightarrow \R^m$ være en lineær afbildning, lad      $\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k$ være vektorer i $\R^n$ og lad $a_1,a_2,\ldots,a_k$ være skalarer, så gælder
+Lad $T:\R^n \rightarrow \R^m$ være en lineær afbildning, $\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k$ være vektorer i $\R^n$ og lad $a_1,a_2,\ldots,a_k$ være skalarer. 
+Så gælder, at
 %
 \begin{align*}
 T(a_1\textbf{u}_1 + a_2\textbf{u}_2 + \cdots + a_k\textbf{u}_k) = T(a_1\textbf{u}_1) + T(a_2\textbf{u}_2) + \cdots + T(a_k\textbf{u}_k).
@@ -93,11 +95,11 @@ Lemmaet følger direkte af sætning \ref{thm:afbegen}.
 \\
 %
 Bemærk, at sætning \ref{thm:afbegen}(a) i nogle tilfælde kan bruges til at vise, hvorvidt en funktion er ikke-lineær, hvis den ikke opfylder betingelsen. 
-Det kan dog forekomme en at en funktion opfylder betingelsen, og stadig er ikke-lineær.
+Det kan dog forekomme, at en funktion opfylder betingelsen og stadig er ikke-lineær.
 % 
 \\\\
 % 
-Hvis afbildningen T er lineær kan en tilsvarende matrix $A$ opstilles, sådan at $T=T_A$, hvilket er belyst i sætning \ref{thm:fisk2}.
+Hvis afbildningen $T$ er lineær, kan en tilsvarende matrix $A$ opstilles, sådan at $T=T_A$, hvilket er belyst i sætning \ref{thm:fisk2}.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
@@ -114,7 +116,7 @@ hvor søjlerne er afbildninger af $T$ ud fra standardvektorene i $\R^n$, så det
 %
 \begin{proof}
 Lad $A= [T(\mathbf{e}_1)\text{    } T(\mathbf{e}_2) \text{    } \ldots \text{    } T(\mathbf{e}_n)]$. 
-Den lineær afbildning af $\mathbf{v}$ er
+Den lineære afbildning af $\mathbf{v}$ er
 %
 \begin{align*}
 T(\mathbf{v})= T(v_1 \mathbf{e}_1+v_2 \mathbf{e}_2+ \ldots + v_n \mathbf{e}_n).
@@ -129,19 +131,19 @@ T(\mathbf{v})= v_1 T( \mathbf{e}_1)+ v_2 T( \mathbf{e}_2) + \ldots + v_n T( \mat
 hvilket kan erstattes med elementerne i matrix A
 %
 \begin{align*}
-T(\mathbf{v})&= v_1 \mathbf{a}_1+ v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n. \\
-&= A \mathbf{v}.
+T(\mathbf{v})&= v_1 \mathbf{a}_1+ v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n \\
+&= A \mathbf{v},
 \end{align*}
-%
-hvilket, jævnfør \ref{defn:fisk3} beviser at
+%Er det meningen, at ovenstående skal være på to linjer? 
+hvilket jævnfør \ref{defn:fisk3} beviser, at
 %
 \begin{align*}
 T(\mathbf{v})= T_A (\mathbf{v}).
 \end{align*}
 %
 Lad $B$ være en $m \times n$ matrix. 
-For at bevise entydigheden, lad $T_A=T_B$. 
-Jævnfør sætning \ref{thm:mxvpro}(e) gælder det at $A=B$, eftersom $A \mathbf{v}=B \mathbf{v}$ for alle $\mathbf{v}$ i $\R^n$.
+For at bevise entydigheden, lad da $T_A=T_B$. 
+Jævnfør sætning \ref{thm:mxvpro}(e) gælder det, at $A=B$, eftersom $A \mathbf{v}=B \mathbf{v}$ for alle $\mathbf{v}$ i $\R^n$.
 \end{proof}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
