--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -1,2 +1,33 @@
 \chapter{Lineær optimeringsproblemer}
 % God arbejdslyst 
+Bare lige noter til opstart xD 
+\\\\
+*Generel definition på optimering 
+- Lineær programmering er? 
+*Alle tingene er lineære 
+- funktion, som ønskes optimeret, begrænsininger (betingelser) 
+
+* Objektfunktion 
+- objektfunktionens maksimum = optimale værdi 
+
+Standart form 
+- Maksimering og mininmering 
+
+Består af 
+- objektfunktion 
+- betingelser (ligheds og ulighedsbetingelser)
+	Lineære betingelser 
+- Ikke-negativitetsbetingelser
+
+maksimere noget 
+i forhold til 
+og 
+
+- Geometrisk tolkning 
+- plot i 2d 
+
+- Ubegrænset og begrænset 
+- konsistent og inkonsistent
+
+
+slack variabler 
