Update linear_algebra.tex, linear_uafhangighed.tex, and 2 more files...

--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,11 +1,24 @@
 \chapter{Lineær algebra}
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
+	% Matricer og vektorer
 	\input{incl/main/linear_algebra/matricer_vektorer/specmatricer.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxsum.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxtrans.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxmulti.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxinvers.tex}
+	
+	% Lineære ligningssystemer
+	\input{incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer}
+	\input{incl/main/linear_algebra/Matrix_vektor-produkt}	
+	% Løsning til lineære ligningssystemer
+	\input{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer}
+	\input{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination}
+	% Span
+	\input{incl/main/linear_algebra/span/span}
+	\input{incl/main/linear_algebra/span/under_bas_dim}
+	% Lineær uafhængighed
+	\input{incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed}
 	\input{incl/main/linear_algebra/lineaer_afbilding}
 	\input{incl/main/linear_algebra/invertibilitet}
