--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -1,4 +1,4 @@
-\subsection{Lineær uafhængighed}
+\section{Lineær uafhængighed}
 % 1.7
 En mængde af vektorer i $\R^n$ kan være \textbf{lineært afhængige} eller \textbf{lineært uafhængige}.
 %
