--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -1,4 +1,4 @@
-\subsection{Span}
+\section{Span}
 % 1.6
 \textbf{Spannet} er den del af vektorrummet, som linearkombinationen af en given mængde vektorer dækker over. 
 %
