--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -1,5 +1,16 @@
 \subsection{Underrum}
+Det kan ofte være belejligt at studere vektorer i en mindre del af $\R^n$, dertil kan der gøres brug af \textbf{underum}.
 
+\begin{defn}{}{}
+En mængde $W$ bestående af vektorer i $\R^n$ er et underrum til $\R^n$ hvis den opfylder følgende betingelser:	
+\begin{enumerate}[label=(\alph*)]
+	\item  $\textbf{0}\in W$.
+	\item $\textbf{u}$,$\textbf{v} \in W \rightarrow \textbf{u}+\textbf{v} \in W $.
+	\item $\textbf{u} \in W$ og $c$ er en skalar så er $\textbf{u}c \in W$.
+\end{enumerate}
+\end{defn}
+\noindent
+Mængden $\R^n$ er et underrum til sig selv, da summen af enhver 2 vektorer i $\R^n$ tilhører $\R^n$, enhver vektor ganget med en skalar er også i $\R^n$ og $\textbf{0}$ er i $\R^n$. Mængden $\{\textbf{0}\}$ er også et underrum til $\R^n$, og kaldes \textbf{nul-underrummet}.
 
 
 \subsection{Basis}
