--- a/incl/pre/pkgs.tex
+++ b/incl/pre/pkgs.tex
@@ -25,13 +25,15 @@
 \usepackage{booktabs}              % bedre tabeller
 \usepackage{caption}               % indstillinger for billedtekst
 \usepackage{subcaption}            % gruppering af flere billeder sammen
-\usepackage{tikz}                  % generer vektorgrafik med LaTeX-kode
+\usepackage{tikz, pgfplots}                  % generer vektorgrafik med LaTeX-kode
 \usepackage[chapter]{algorithm}    % algoritme-figurer
 \usepackage[noend]{algpseudocode}  % pseudokode
 \usepackage{listings}              % visning af kildekode
 \usepackage{tcolorbox}
 \tcbuselibrary{theorems}
 \usepackage{listings}			   % directe input af kode
+%\usepackage{pgfplots}
+	\usepgfplotslibrary{fillbetween}
 
 % Styling-pakker ---------------------------------------------------------------
 \usepackage{microtype}             % forbedret justering af tekst
