Update indledning.tex and Invers eksempel.tex

--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -6,3 +6,25 @@
 %   Kapitel 1: bla bla 
 %   Kapitel 2: bla bla 
 %   m.m.
+Optimeringsproblemer er en fundamental del af matematikken, og i den anvendte matematik udgøre disse en vægtig del af matematikkeres virke.
+I denne rapport vil liniære optimeringsproblemer undersøges. Dele af forskningsfeltet betragter disse som havende ophav ved Danzig og dennes udarbejdelse af simplexmetoden(ref) i 1947.
+Der er dog tilstadighed diskussion om hvor liniære programeringsproblemer som matematisk felt stammer fra og andre peger på Sovjetunionen og behovet for at optimere produktionen i en planøkonomisk kontekst som ophav.(ref2)  
+Forudsætningen for at Danzig arbejdede med liniære programeringsproblemer var hans ansættelse ved Royal Airforc(ref) og en applikation blev i forbindelse med den vestligt kontrolerede sektor af Berlin.
+Vestberlin lå dybt inde i den sovjetisk kontrolerede sektor af Tyskland og som følge af spændingerne mellem vesteuropa og Sovjet besluttede Josef Stalin at lukke for forsyninger via jorden til Berlin.
+Det blev derfor nødvendigt for vestmagterne at etablere en luftbro til Berlin der gjorde det muligt trods de sovjetiske restriktioner at indføre basale fornødehender til de $2,5$ milloner mennesker der levede i byen.
+Da en sådan måde at indføre vare på er ressourceintensiv, blev der derfor behov for at gøre dette mest effektivt underlagt de logistiske restriktioner.
+Det er derfor et matematisk felt der i sin brug er nært bundet op på praktiske problemstillinger dette værende økonomiske og logistiske.
+Det er derfor også et felt der har været nært knyttet op til militære problemstillinger som Danzigs ansættelsesforhold også antyder.
+Danzigs bidrag til forskningsfeltet, altså simplexmetoden, er dog stadigt en fundamental del af hvordan løsningen af liniære programmeringsproblemer behandles i dag.
+Projektets primære arbejdsområde vil derfor omhandle simplex-metoden samt den geometriske fremstilling af liniære programeringsproblemer.
+Det skal dog nævnes at der ligeledes findes optimeringsproblemer der ikke kan beskrives igennem liniære sammenhænge, en afgrænsning bliver her at disse ikke vil beskrives i dette indeværende projekt.
+Problemformuleringen bliver derfor som følger:
+Problemformulering:
+Hvordan kan liniære porgrameringsproblemer anskues geometrisk og hvordan kan disse løses ved hjælp af simplexmetoden?
+Med henblik på at besvare denne vil følgende emneområder bliver inddraget:
+\begin{itemize}
+\item En introduktion til liniær algebra: Afsnittet har til hensigt at indføre passende notation, samt introducere væsentlige metoder og begreber til løsning af liniære programeringsproblemer.
+\item Liniære programeringsproblemer: Projektets primære emneområde. Det vil her introduceres hvordan disse fremstilles matematiske samt interessante egenskaber herved.
+\item Geometrisk fremstilling: her skal der stå et eller andet når vi ved hvad der er med.
+\item Simplexmetoden: Beskrivelse og bevis af Simplex som løsningsalgoritme.
+\end{itemize}
