--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -207,7 +207,7 @@ Ud fra dette ses det, at $\mathbf{v}$ er i $\text{span}\{\S \}$.
 %
 Egenskaberne vedrørende spannet kan udtrykkes på forskellige måder, hvilket leder til følgende sætning:
 % 
-\begin{thm}{}{}
+\begin{thm}{}{spaneqv}
 %
 De følgende udsagn om en $m \times n$ matrix $A$ er ækvivalente:
 %
