Update generalt.tex and standardform.tex

--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -41,4 +41,20 @@ Betragt minimeringsproblem
 På figur \ref{} kan mulighedsområdet, markeret med blå, for minimeringsproblemet ses.
 %
 \input{fig/tikz/min_beg}
+% 
+Havde minimeringsproblemet istedet set ud som følgende: 
+
+\begin{align*}
+\begin{array}{lrrlr}
+\text{Minimer}		&	\multicolumn{2}{c}{4x_1-3x_2}  &\\
+\text{begrænset af}	&2x_1& - x_2			&\leq 	&-10,\\
+					&x_1& - x_2				&\geq	& 7,\\
+					&x_1&					&\geq	& 0,
+\end{array}
+\end{align*}
+havde minimeringsproblemet været ubegrænset, da funktionsværdierne kunne blive uendelig store. 
+Mulighedsområdet for minimeringsproblemet ses på figur \ref{}, hvor det er markeret med blå.
+%
+\input{fig/tikz/min_beg} % Skal lige ændres til den rigtige 
+%
 \end{eks}
