--- a/incl/main/linear_optimeringsproblemer/standardform.tex
+++ b/incl/main/linear_optimeringsproblemer/standardform.tex
@@ -1,2 +1,10 @@
 \section{Standardform}
-% God arbejdslyst 
+% 
+
+\begin{align*}
+\begin{array}{lrl}
+\text{Maksimer}		&\textbf{c}^T\textbf{x}	&				\\
+\text{begrænset af}	&\textbf{A}\textbf{x}	&=\mathbf{b},	\\
+					&\mathbf{x}				&\geq \mathbf{0},		
+\end{array}
+\end{align*}
