--- a/fig/tikz/min_beg.tex
+++ b/fig/tikz/min_beg.tex
@@ -31,6 +31,6 @@
 
 \end{axis}
 \end{tikzpicture}
-\caption{Betingelserne, der danner mulighedsområdet, markeret med blå, for minimeringsproblemet. betingelserne }
+\caption{Betingelserne, der danner mulighedsområdet, markeret med blå, for minimeringsproblemet.}
 \label{sammenligning_kompleks}
 \end{figure}
