--- a/incl/main/linear_optimeringsproblemer/standardform.tex
+++ b/incl/main/linear_optimeringsproblemer/standardform.tex
@@ -8,3 +8,17 @@
 					&\mathbf{x}				&\geq \mathbf{0},		
 \end{array}
 \end{align*}
+hvor 
+
+\begin{align*}
+\begin{array}{lrl}
+\text{Minimer}		&\textbf{c}^T\textbf{x}	&				\\
+\text{begrænset af}	&\textbf{A}\textbf{x}	&=\mathbf{b},	\\
+					&\mathbf{x}				&\geq \mathbf{0},		
+\end{array}
+\end{align*}
+hvor 
+
+\begin{align*}
+
+\end{align*}
