--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -55,6 +55,6 @@ Havde minimeringsproblemet istedet set ud som følgende:
 havde minimeringsproblemet været ubegrænset, da funktionsværdierne kunne blive uendelig store. 
 Mulighedsområdet for minimeringsproblemet ses på figur \ref{}, hvor det er markeret med blå.
 %
-\input{fig/tikz/min_beg} % Skal lige ændres til den rigtige 
+\input{fig/tikz/min_ubeg}
 %
 \end{eks}
