Update min_beg.tex and min_ubeg.tex

--- a/fig/tikz/min_beg.tex
+++ b/fig/tikz/min_beg.tex
@@ -5,7 +5,7 @@
 	axis lines = left,
 	xlabel = $x_1$,
 	ylabel = {$x_2$},
-	legend style={at={(0.8,0.05)},anchor=south west},
+	legend style={at={(0.45,0.025)},anchor=south west},
 ]
 	\addplot[name path=b, domain={0:1}, color=myblue, style=very thick,samples=2]{2*x+10};
 	\addlegendentry{$2x_1-x_2 \leq -10$}
@@ -27,5 +27,5 @@
 \end{axis}
 \end{tikzpicture}
 \caption{Betingelserne, der danner mulighedsområdet, markeret med blå, for minimeringsproblemet.}
-\label{sammenligning_kompleks}
+\label{fig:min_beg}
 \end{figure}
