--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -38,9 +38,10 @@ Betragt minimeringsproblem
 \end{array}
 \end{align*}
 %
-På figur \ref{} kan mulighedsområdet, markeret med blå, for minimeringsproblemet ses.
+På figur \ref{fig:min_beg} kan løsningsområdet, markeret med blå, for minimeringsproblemet ses.
 %
 \input{fig/tikz/min_beg}
+\noindent
 % 
 Havde minimeringsproblemet istedet set ud som følgende: 
 
@@ -53,7 +54,7 @@ Havde minimeringsproblemet istedet set ud som følgende:
 \end{array}
 \end{align*}
 havde minimeringsproblemet været ubegrænset, da funktionsværdierne kunne blive uendelig store. 
-Mulighedsområdet for minimeringsproblemet ses på figur \ref{}, hvor det er markeret med blå.
+Løsningsområdet for minimeringsproblemet ses på figur \ref{fig:min_ubeg}, hvor det er markeret med blå.
 %
 \input{fig/tikz/min_ubeg}
 %
