Update min_beg.tex, min_ubeg.tex, and generalt.tex

--- a/fig/tikz/min_ubeg.tex
+++ b/fig/tikz/min_ubeg.tex
@@ -18,9 +18,11 @@
 	
 	\addplot[domain=0:5,samples=2,color=myblue, style=very thick]{2*x+10};
 	\addplot[domain=0:15,samples=2,color=mygreen, style=very thick]{x-7};
+	
+	\addplot[domain=0:15, samples=2, color=black, dotted, thick]{0};
 
 \end{axis}
 \end{tikzpicture}
-\caption{Betingelserne, der danner mulighedsområdet, markeret med blå, for minimeringsproblemet.}
+\caption{Betingelserne, der danner løsningsmængden, markeret med blå, for minimeringsproblemet.}
 \label{fig:min_ubeg}
 \end{figure}
