--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -42,18 +42,20 @@ På figur \ref{fig:min_beg} kan løsningsområdet, markeret med blå, for minime
 %
 \input{fig/tikz/min_beg}
 \noindent
+%
+Med udgangspunkt i figur \ref{fig:min_beg} kan det ses, at løsningsmængden er begrænset.
 % 
 Havde minimeringsproblemet istedet set ud som følgende: 
-
+%
 \begin{align*}
 \begin{array}{lrrlr}
-\text{Minimer}		&	\multicolumn{2}{c}{4x_1-3x_2}  &\\
+\text{Minimer}		&\multicolumn{2}{c}{4x_1-3x_2}  &\\
 \text{begrænset af}	&2x_1& - x_2			&\leq 	&-10,\\
 					&x_1& - x_2				&\geq	& 7,\\
 					&x_1&					&\geq	& 0,
 \end{array}
 \end{align*}
-havde minimeringsproblemet været ubegrænset, da funktionsværdierne kunne blive uendelig store. 
+havde minimeringsproblemet været ubegrænset, da $x_1$ og $x_2$ kunne blive uendelig store. 
 Løsningsområdet for minimeringsproblemet ses på figur \ref{fig:min_ubeg}, hvor det er markeret med blå.
 %
 \input{fig/tikz/min_ubeg}
