--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -1,14 +1,43 @@
 \subsection{Elementære og inverse matricer}
-%Den nedenstående, første periode er måske unødvendig, tænker jeg. 
-Inden definitionen af \textbf{inverse matricer} er det relevant at redegøre for \textbf{elementære matricer}. 
-At multiplicere en matrix $A$ med en $n \times n$ elementær matrix $E$ svarer til at udføre én rækkeoperation på $A$. 
+At multiplicere en matrix $A$ med en $n \times n$ \textbf{elementær matrix} $E$ svarer til at udføre én rækkeoperation på $A$. 
 Dermed kan enhver rækkeoperation udføres gennem matrixmultiplikation. 
 En $n \times n$ matrix $E$ er elementær, hvis én rækkeoperation udført på $I_n$ resulterer i $E$. 
 %Eksempel? 
 
 Lad nu $A$ være en $m \times n$ matrix og $E$ en elementær $m \times m$ matrix, der er resultatet af én rækkeoperation udført på $I_m$. 
 Matrixproduktet $EA$ kan opnås ved at udføre én rækkeoperation på $A$. 
-Enhver elementær matrix er desuden invertibel, og dens invers er også en elementær matrix. 
+Enhver elementær matrix er desuden \textbf{invertibel}, og dens \textbf{invers} er også en elementær matrix. 
+%
+\begin{defn}{}{mxinvers}
+En $n \times n$ matrix $A$ er invertibel, hvis en $n \times n$ matrix $B$ eksisterer, så $AB=BA=I_n$. $B$ er i så fald $A$'s invers. 
+\end{defn}
+Såfremt $A$ er en invertibel $n \times n$ matrix, gælder det for ethvert $B \in \R^n$, at $A\textbf{x}=B$ har den entydige løsning $A^{-1}B$. 
+%
+Inverse matricer har en række egenskaber, hvoraf nogle centrale er formuleret i sætning \ref{thm:mxinvers}. 
+%
+\begin{thm}{}{mxinvers}
+Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
+\begin{enumerate}[label=(\alph*)]
+\item Hvis $A$ er invertibel, så er $A^{-1}$ invertibel, og $(A^{-1})^{-1}=A$.
+\item Hvis $A$ og $B$ er invertible, så er $AB$ invertibel, og $(AB)^{-1}=A^{-1}B^{-1}$.
+\item Hvis $A$ er invertibel, så er $A^T$ invertibel, og $(A^T)^{-1}=(A^{-1})^T$.
+\end{enumerate}
+\end{thm}
+%
+%
+\begin{proof}
+Punkt (a) følger af definition \ref{thm:mxinvers}. 
+(b) Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
+Det kan gennem lignende operationer vises at $(B^{-1}A^{-1})(AB)=I_n$.
+Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$ altså er $AB^{-1}=A^{-1}B^{-1}$.
+(c) Antag at A er invertibel. 
+Det følger fra definition \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
+Fra punkt (g) i sætning \ref{thm:mxmulti} følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
+Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
+Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
+\end{proof}
+%
+%NOGET OM ELEMENTÆRE MATRICER OG INVERTIBILITET
 %
 \begin{thm}{}{eleinv}
 Lad $A$ være en $m \times n$ matrix, og $R$ den reducerede trappeform af $A$. 
@@ -76,12 +105,9 @@ $.
 Beviset for korollar \ref{kor:eleinv} følger af beviset for sætning \ref{thm:eleinv} med tilføjelsen, at hvis $\textbf{b}=\textbf{0}$, så er $\textbf{c}=\textbf{0}$, hvilket resulterer i nulvektoren i begge udtryk. 
 %
 %
-\begin{defn}{}{mxinvers}
-En $n \times n$ matrix $A$ er \textbf{invertibel}, hvis en $n \times n$ matrix $B$ eksisterer, så $AB=BA=I_n$. $B$ er i så fald $A$'s invers. 
-\end{defn}
+%HER SAD DEF 3.8 FØR
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Det er dog ikke altid, der findes en matrix $B$, så kriterierne i definition \ref{defn:mxinvers} opfyldes. 
-Såfremt $A$ er en invertibel $n \times n$ matrix, gælder det for ethvert $B \in \R^n$, at $A\textbf{x}=B$ har den entydige løsning $A^{-1}B$.
 %
 \begin{thm}{}{mxinvertibel}
 Lad $A$ være en $n \times n$ matrix. 
@@ -105,30 +131,7 @@ A=I_nA=(P^{-1}P)A=^{-1}(PA)=P^{-1}.
 Fra sætning fremgår det at $P^{-1}$ er en invertibel matrix, og det er hermed bevist at $A$ er invertibel da $A=P^{-1}$.
 \end{proof}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Inverse matricer har en række egenskaber, som formuleret i sætning \ref{thm:mxinvers} og \ref{thm:mxinvers2}. 
-%
-\begin{thm}{}{mxinvers}
-Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
-\begin{enumerate}[label=(\alph*)]
-\item Hvis $A$ er invertibel, så er $A^{-1}$ invertibel, og $(A^{-1})^{-1}=A$.
-\item Hvis $A$ og $B$ er invertible, så er $AB$ invertibel, og $(AB)^{-1}=A^{-1}B^{-1}$.
-\item Hvis $A$ er invertibel, så er $A^T$ invertibel, og $(A^T)^{-1}=(A^{-1})^T$.
-\end{enumerate}
-\end{thm}
-%
-%
-\begin{proof}
-Punkt (a) følger af definition \ref{thm:mxinvers}. 
-(b) Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
-Det kan gennem lignende operationer vises at $(B^{-1}A^{-1})(AB)=I_n$.
-Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$ altså er $AB^{-1}=A^{-1}B^{-1}$.
-(c) Antag at A er invertibel. 
-Det følger fra definition \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
-Fra punkt (g) i sætning \ref{thm:mxmulti} følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
-Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
-Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
-\end{proof}
-%
+Sætning \ref{thm:mxinvers2} redegør for nogle yderligere egenskaber for invertible matricer. 
 %
 \begin{thm}{}{mxinvers2}
 %Givet to $m \times n$ matricer $A$ og $B$, så gælder, at (det er bare leftover aye?)
@@ -142,14 +145,15 @@ Da er følgende udsagn ækvivalente.
 \item ligningssystemet $A\textbf{x}=\textbf{b}$ er konsistent for alle $\textbf{b}$ i $R^n$.
 \item null$(A)$=0.
 \item Søjlerne i $A$ er lineært uafhængige.
-\item den eneste løsning for $A\textbf{x}=\textbf{O}$ er $\textbf{O}$.
-\item Der eksisterer en $n \times n$ matrix $B$ så $BA=I_n$.
-\item Der eksister en $n \times n$ matrix $C$ så $AC=I_n$
-\item $A$ er et produkt af elementarmatricer.
+\item Den eneste løsning for $A\textbf{x}=\textbf{O}$ er $\textbf{O}$.
+\item Der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$.
+\item Der eksister en $n \times n$ matrix $C$, så $AC=I_n$.
+\item $A$ er et produkt af elementære matricer.
 %hvis vi tager det sidste punkt med er vi også nødt til at redegøre for det. 
 \end{enumerate}
 \end{thm}
 \begin{proof}
+Lad $A$ være en $n \times n$ matrix.
 Jævnfør sætning \ref{thm:mxinvertibel} er (a) og (b) ækvivalente. 
 Da $A$ er kvadratisk, er (b) ligeledes ækvivalent med (c), (d) og (e) jævnfør sætning \ref{thm:spaneqv}. 
 Jævnfør sætning \ref{thm:mxlinuaf} er (b) desuden ækvivalent med (f), (g) og (h). 
@@ -157,7 +161,32 @@ Eftersom (a) er ækvivalent med (b), er (a) også ækvivalent med (c), (d), (e),
 
 At (a) og (k) er ækvivalente, bevises i to skridt. 
 (1) Bemærk, at hvis $A$ er invertibel, så er $I_n$ er den reducerede trappeform af $A$. 
-%Der skal skrives om elementarmatricer, før vi kan lave resten af beviset ordentligt. 
+Jævnfør sætning \ref{thm:eleinv} og \ref{thm:mxinvertibel} eksisterer der en invertibel matrix $P$, så at $PA=I_n$, hvormed $A=P^{-1}$. 
+Da $P=E_kE_{k-1} \cdots E_1$, så er $P^{-1}=E_1^{-1} \cdots E_{k-1}^{-1}E_k^{-1}$.
+$A$ er dermed et produkt af elementære matricer, hvilket beviser, at (a) medfører (k). \\
+(2) Antag nu, at $A$ er en produkt af elementære matricer. 
+Elementære matricer er invertible, hvormed $A$ er et produkt af invertible matricer. 
+$A$ er derfor invertibel, hvilket bekræfter (a), hvilket gør (a) og (k) ækvivalente. 
+
+At (a) medfører (i) er tydeligt, da $B=A^{1}$. 
+Antag nu, at der eksisterer en $n \times n$ matrix $B$, så $BA=I_n$. Lad $\textbf{v} \in \R^n$, så at $A\textbf{v}=\textbf{b}$. Så gælder, at 
+$$
+\textbf{v} = I_n\textbf{v} = (BA)\textbf{v} = B(A\textbf{v} = B\textbf{0} = \textbf{0}.
+$$
+Bemærk, at (i) dermed medfører (h).
+Eftersom (h) er ækvivalent med (a), medfører (i) derfor også (a).
+Således er (i) og (a) ækvivalente. 
+
+At (a) medfører (j) er igen tydeligt, da $C=A^{1}$.
+Antag nu, at der eksister en $n \times n$ matrix $C$, så $AC=I_n$. 
+Lad $\textbf{b} \in \R^n$ og $\textbf{v}=C\textbf{b}$. 
+Så gælder, at 
+$$
+A\textbf{v} = A(C\textbf{b}) = (AC)\textbf{b} = I_n\textbf{b} = \textbf{b}.
+$$
+Bemærk, at (j) dermed medfører (e).
+Eftersom (e) er ækvivalent med (a), medfører (j) derfor også (a).
+Således er (j) og (a) ækvivalente, og alle punkter i sætning \ref{thm:mxinvers2} er dermed bevist ækvivalente.
 \end{proof}
 
 
